# voice-companion-starter-public

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_PURPOSE.md  README.md  app.py  compose.yaml  pyproject.toml  requirements.txt  test_app.py
.github/workflows/: tests.yml
docs/: API.md  ARCHITECTURE.md  SECURITY.md
static/: app.js  index.html  styles.css
voice_companion/: __init__.py  config.py  services.py  web.py
